# EventBus

./: CMakeLists.txt  README.md
include/: eventbus.h
src/: compoundstring.cpp  compoundstring.h  event.cpp  event.h  eventbus.cpp  eventbus.h
test/: main.cpp  testevent.cpp  testevent.h
